[metadata]
name = Monasca Monitor
author = StackHPC
author-email = doug@stackhpc.com
summary =
    A lightweight proof of concept Monasca monitor
home-page = https://github.com/stackhpc/monasca-monitor
license = Apache-2
version = 0.0.1
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python
